--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,8 +10,8 @@ pool:
   name: Default
 
 variables:
-  BEARERTOKEN: $(BEARERTOKEN)
-  ORGANIZATION: $(ORGANIZATION)
+  BEARERTOKEN: $(TOKEN)
+  ORGANIZATION: $(ORG)
 
 steps:  
 - task: Maven@3
