--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,11 +10,14 @@ pool:
   name: Default
 
 variables:
-  BEARERTOKEN: $(TOKEN)
-  ORGANIZATION: $(ORG)
+  token_github: $(TOKEN)
+  org_github: $(ORG)
 
 steps:  
 - task: Maven@3
+  env:
+    BEARERTOKEN: $(token_github) 
+    ORGANIZATION: $(org_github) 
   displayName: 'Run tests'
   inputs:
     mavenPomFile: 'pom.xml'
@@ -27,5 +30,6 @@ steps:
     mavenAuthenticateFeed: false
     effectivePomSkip: false
     sonarQubeRunAnalysis: false
+
 
 
