--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,12 +17,17 @@ variables:
   value: $[variables.org] # uses runtime expression
 
 steps:  
+- script: |
+    echo '##vso[task.setvariable variable=BEARERTOKEN]$token_github'  
+- script: |
+    echo "my environment variable is %BEARERTOKEN%"    
+- script: |
+    echo '##vso[task.setvariable variable=ORGANIZATION]$org_github'  
+- script: |
+    echo "my environment variable is %ORGANIZATION%"
 - task: Maven@3
-  displayName: 'Run tests'
-  env:
-    BEARERTOKEN: $(token_github) 
-    ORGANIZATION: $(org_github) 
-  inputs:
+  displayName: 'Run tests'   
+  inputs:  
     mavenPomFile: 'pom.xml'
     goals: 'test'
     publishJUnitResults: false
