--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -11,14 +11,17 @@ pool:
 
 steps:
 - task: DownloadSecureFile@1
+  displayName: 'Download .env file'
   inputs:
     secureFile: '.env'
 - task: CopyFiles@2
+  displayName: 'Copy .env to the temp directory'
   inputs:
     SourceFolder: $(Agent.TempDirectory)
     Contents: '**\.env'
     TargetFolder: $(Build.SourcesDirectory)
 - task: Maven@3
+  displayName: 'Run tests and Export results'
   inputs:
     mavenPomFile: 'pom.xml'
     mavenOptions: '-Xmx3072m'
